# Otus_hw2

./: CMakeLists.txt  main.cpp  test_ip_filter.cpp
.github/workflows/: release.yml
modules/: CMakeLists.txt  filter_lib.cpp  filter_lib.h
